feat: persist playback sessions
